--- a/PiDash/public/styles.css
+++ b/PiDash/public/styles.css
@@ -10,15 +10,18 @@ body {
 }
 .button-container {
     display: grid;
-    grid-template-columns: repeat(3, 100px);
-    grid-template-rows: repeat(2, 100px);
-    gap: 20px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 10vw;
+    width: 60vw;
+    height: 60vw;
+    max-height: 100vh;
     justify-content: center;
     align-items: center;
 }
 .button-slot {
-    width: 80px;
-    height: 80px;
+    width: 100%;
+    aspect-ratio: 1 / 1;
     background-color: #1A1A1A;
     border: 4px solid #454545;
     border-radius: 10px;
@@ -26,7 +29,7 @@ body {
     align-items: center;
     justify-content: center;
     color: white;
-    font-size: 16px;
+    font-size: 2vw;
     cursor: pointer;
     transition: border-color 0.3s;
 }
